--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,38 @@ jobs:
           command: |
             mix local.hex --force && mix local.rebar --force
             mix deps.get
-            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test, credo, format --check-formatted --dry-run
+            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test,
+
+      - save_cache:
+          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
+          paths:
+            - "deps"
+
+  credo:
+    machine:
+      image: ubuntu-1604:201903-01
+
+    working_directory: ~/ex_plasma
+
+    steps:
+      - checkout
+      - run:
+          name: Install Erlang and Elixir
+          command: |
+            set -e
+            wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
+            sudo dpkg -i erlang-solutions_2.0_all.deb
+            sudo apt-get update
+            sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
+      - run: docker-compose up -d
+      - restore_cache:
+          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
+      - run:
+          name: Run tests
+          command: |
+            mix local.hex --force && mix local.rebar --force
+            mix deps.get
+            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, credo, format --check-formatted --dry-run
 
       - save_cache:
           key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
