--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,13 +24,12 @@ jobs:
           command: |
             mix local.hex --force && mix local.rebar --force
             mix deps.get
-            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test,
+            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test
 
       - save_cache:
           key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
           paths:
             - "deps"
-
   credo:
     machine:
       image: ubuntu-1604:201903-01
