--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,62 +1,57 @@
 version: 2.1
 jobs:
   build:
-    machine:
-      image: ubuntu-1604:201903-01
-
     working_directory: ~/ex_plasma
-
+    docker:
+      - image: circleci/elixir:1.9.2
+    environment:
+      MIX_ENV=test
     steps:
       - checkout
-      - run:
-          name: Install Erlang and Elixir
-          command: |
-            set -e
-            wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
-            sudo dpkg -i erlang-solutions_2.0_all.deb
-            sudo apt-get update
-            sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
-      - run: docker-compose up -d
+      - run: mix local.rebar --force
+      - run: mix local.hex --force
       - restore_cache:
-          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
-      - run:
-          name: Run tests
-          command: |
-            mix local.hex --force && mix local.rebar --force
-            mix deps.get
-            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test
-
+          key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+      - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
       - save_cache:
-          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
+          key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
           paths:
             - "deps"
+            - "_build"
+  test:
+    working_directory: ~/ex_plasma
+    docker:
+      - image: circleci/elixir:1.9.2
+    environment:
+      MIX_ENV=test
+    steps:
+      - checkout
+      - run: mix local.rebar --force
+      - run: mix local.hex --force
+      - restore_cache:
+          key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+      - run: mix test --exclude skip
   credo:
-    machine:
-      image: ubuntu-1604:201903-01
-
     working_directory: ~/ex_plasma
-
+    docker:
+      - image: circleci/elixir:1.9.2
+    environment:
+      MIX_ENV=test
     steps:
       - checkout
-      - run:
-          name: Install Erlang and Elixir
-          command: |
-            set -e
-            wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
-            sudo dpkg -i erlang-solutions_2.0_all.deb
-            sudo apt-get update
-            sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
-      - run: docker-compose up -d
+      - run: mix local.rebar --force
+      - run: mix local.hex --force
       - restore_cache:
-          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
-      - run:
-          name: Run tests
-          command: |
-            mix local.hex --force && mix local.rebar --force
-            mix deps.get
-            MIX_ENV=test mix do local.hex --force, local.rebar --force, compile --warnings-as-errors --ignore-module-conflict --force, credo, format --check-formatted --dry-run
-
-      - save_cache:
-          key: v1-specs-deps-cache-{{ checksum "mix.lock" }}
-          paths:
-            - "deps"
+          key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+      - run: mix do credo, format --check-formatted --dry-run
+workflows:
+  version: 2
+  build-test-lint:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - credo:
+          requires:
+            - build
