--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,7 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
-      - run: mix local.rebar --force
-      - run: mix local.hex --force
+      - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
@@ -26,8 +25,7 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
-      - run: mix local.rebar --force
-      - run: mix local.hex --force
+      - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - run: mix test --exclude skip
@@ -39,11 +37,38 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
-      - run: mix local.rebar --force
-      - run: mix local.hex --force
+      - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - run: mix do credo, format --check-formatted --dry-run
+
+  conformance:
+    machine:
+      image: ubuntu-1604:201903-01
+
+    working_directory: ~/ex_plasma
+
+    steps:
+      - checkout
+      - run:
+          name: Install Erlang and Elixir
+          command: |
+            set -e
+            wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
+            sudo dpkg -i erlang-solutions_2.0_all.deb
+            sudo apt-get update
+            sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
+      - run: mix local.rebar --force && mix local.hex --force
+      - run: docker-compose -f docker-compose.yml -f docker-compose.conformance.yml up -d ganache mock-contracts
+      - restore_cache:
+          key: v1-conformance-deps-cache-{{ checksum "mix.lock" }}
+      - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
+      - save_cache:
+          key: v1-conformance-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          paths:
+            - "deps"
+            - "_build"
+      - run: mix test --only conformance
 workflows:
   version: 2
   build-test-lint:
@@ -55,3 +80,4 @@ workflows:
       - credo:
           requires:
             - build
+      - conformance
