--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
       - run: mix local.rebar --force && mix local.hex --force
-      - run: docker-compose -f docker-compose.yml -f docker-compose.conformance.yml up -d ganache mock-contracts
+      - run: make up-mocks
       - restore_cache:
           key: v1-conformance-deps-cache-{{ checksum "mix.lock" }}
       - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
@@ -81,7 +81,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install esl-erlang=1:21.3.8.10-1 elixir=1.9.2-1
       - run: mix local.rebar --force && mix local.hex --force
-      - run: docker-compose -f docker-compose.yml -f docker-compose.conformance.yml up -d ganache mock-contracts
+      - run: make up
       - restore_cache:
           key: v1-conformance-deps-cache-{{ checksum "mix.lock" }}
       - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
