--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - run: mix test --exclude skip
+    override: 
+      - mix coveralls.circle
   credo:
     working_directory: ~/ex_plasma
     docker:
