fix other plt key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - restore_cache:
-          key: v1-dialyzer-plt-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          key: v1-dialyzer-plts-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
       - run:
           name: Unpack PLT cache
           command: |
@@ -94,7 +94,7 @@ jobs:
             cp _build/dev/dialyxir*.plt plts/
             cp ~/.mix/dialyxir*.plt plts/
       - save_cache:
-          key: v1-dialyzer-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          key: v1-dialyzer-plts-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
           paths:
             - "plts"
   integration:
