--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+      - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
       - run: mix do credo, format --check-formatted --dry-run
   conformance:
     machine:
@@ -87,6 +88,7 @@ jobs:
             cp plts/dialyxir*.plt _build/dev/ || true
             mkdir -p ~/.mix
             cp plts/dialyxir*.plt ~/.mix/ || true
+      - run: mix do deps.get, compile --warnings-as-errors --ignore-module-conflict --force
       - run: mix dialyzer --halt-exit-status
       - run:
           name: Pack PLT cache
