--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-      - run: mix test --exclude skip
+      - run: mix do deps.get, test --exclude skip
       - run: mix coveralls.circle
   credo:
     working_directory: ~/ex_plasma
@@ -41,7 +41,7 @@ jobs:
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-      - run: mix do credo, format --check-formatted --dry-run
+      - run: mix do deps.get, credo, format --check-formatted --dry-run
   conformance:
     machine:
       image: ubuntu-1604:201903-01
@@ -87,7 +87,7 @@ jobs:
             cp plts/dialyxir*.plt _build/dev/ || true
             mkdir -p ~/.mix
             cp plts/dialyxir*.plt ~/.mix/ || true
-      - run: mix dialyzer --halt-exit-status
+      - run: mix do deps.get, dialyzer --halt-exit-status
       - run:
           name: Pack PLT cache
           command: |
