--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
+      - run:
+          name: Install Rust
+          command: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -19,6 +22,7 @@ jobs:
           paths:
             - "deps"
             - "_build"
+            - "~/.cargo/"
   test:
     working_directory: ~/ex_plasma
     docker:
@@ -27,6 +31,7 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
+      - run: echo 'export PATH=~/.cargo/bin/:$PATH' >> $BASH_ENV
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -50,6 +55,7 @@ jobs:
     working_directory: ~/ex_plasma
     steps:
       - checkout
+      - run: echo 'export PATH=~/.cargo/bin/:$PATH' >> $BASH_ENV
       - run:
           name: Install Erlang and Elixir
           command: |
