--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,19 @@
 version: 2.1
+commands:
+  add_rust_to_path:
+    description: "Add path to PATH env var"
+    steps:
+      - run:
+          name: Add rust to PATH env
+          command: echo 'export PATH=~/.cargo/bin/:$PATH' >> $BASH_ENV
+  install_rust:
+    description: "Install Rust"
+    steps:
+      - run:
+          name: Install Rust
+          command: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+      - add_rust_to_path
+
 jobs:
   build:
     working_directory: ~/ex_plasma
@@ -8,6 +23,7 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
+      - install_rust
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -19,6 +35,7 @@ jobs:
           paths:
             - "deps"
             - "_build"
+            - "~/.cargo/"
   test:
     working_directory: ~/ex_plasma
     docker:
@@ -27,6 +44,7 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
+      - add_rust_to_path
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -50,6 +68,7 @@ jobs:
     working_directory: ~/ex_plasma
     steps:
       - checkout
+      - install_rust
       - run:
           name: Install Erlang and Elixir
           command: |
@@ -68,7 +87,9 @@ jobs:
           paths:
             - "deps"
             - "_build"
+            - "~/.cargo/"
       - run: mix test --only conformance
+
   dialyzer:
     working_directory: ~/ex_plasma
     docker:
@@ -77,6 +98,7 @@ jobs:
       MIX_ENV=dev
     steps:
       - checkout
+      - install_rust
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -89,7 +111,9 @@ jobs:
             cp plts/dialyxir*.plt _build/dev/ || true
             mkdir -p ~/.mix
             cp plts/dialyxir*.plt ~/.mix/ || true
-      - run: mix do deps.get, dialyzer --halt-exit-status
+      - run:
+          command: mix do deps.get, dialyzer --halt-exit-status
+          no_output_timeout: 30m
       - run:
           name: Pack PLT cache
           command: |
