--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,9 @@ jobs:
       MIX_ENV=test
     steps:
       - checkout
-      - add_rust_to_path
+      - install_rust_elixir:
+          cache: "test"
+          dir: "~/ex_plasma"
       - run: mix local.rebar --force && mix local.hex --force
       - restore_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
